--- a/.github/workflows/helix_ci.yml
+++ b/.github/workflows/helix_ci.yml
@@ -27,13 +27,12 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install flake8
-        # Install dependencies required by setup.py (just in case)
-        pip install cryptography rich colorama
-        # We don't need 'pip install -e .' if we run python directly, 
-        # but we do it to check setup.py validity.
+        # Install dependencies required by setup.py
+        pip install cryptography rich colorama streamlit
+        # Install Helix in editable mode to check setup.py validity
         pip install -e .
 
-    - name: Debug File Structure (See what is actually here)
+    - name: Debug File Structure
       run: |
         echo "📂 Root Directory:"
         ls -la
@@ -44,7 +43,6 @@ jobs:
       env:
         PYTHONPATH: .
       run: |
-        # Run python directly to avoid path issues
         python3 helix.py version
 
     - name: Run Integration Suite (The Golden Path)
@@ -69,15 +67,43 @@ jobs:
         # 5. List Agents
         python3 helix.py list --directory artifacts
 
+    # --- SUPPLY CHAIN SECURITY ---
+    - name: 🛡️ Generate SBOM (Syft)
+      uses: anchore/sbom-action@v0
+      with:
+        path: .
+        format: spdx-json
+        output-file: artifacts/helix-sbom-${{ matrix.python-version }}.spdx.json
+        upload-artifact: false  # <--- CRITICAL FIX: Prevents matrix collision
+
+    # --- THE CUSTODY GATE (ROBUST CHECK) ---
     - name: Assert Artifacts Exist
       run: |
-        if [ -f artifacts/*.dbc.json ] && [ -f artifacts/*.suitcase.json ]; then
-          echo "✅ All artifacts generated successfully."
-        else
-          echo "❌ Missing artifacts."
-          ls -R artifacts
+        echo "🔍 Auditing Artifacts directory..."
+        ls -la artifacts/
+
+        # Check for DBC (The Identity)
+        count_dbc=$(find artifacts -maxdepth 1 -name "*.dbc.json" | wc -l)
+        if [ "$count_dbc" -eq 0 ]; then
+          echo "❌ FAILURE: No DBC (Identity) found."
           exit 1
         fi
+
+        # Check for SUITCASE (The Log)
+        count_case=$(find artifacts -maxdepth 1 -name "*.suitcase.json" | wc -l)
+        if [ "$count_case" -eq 0 ]; then
+          echo "❌ FAILURE: No Suitcase (Log) found."
+          exit 1
+        fi
+
+        # Check for SBOM (The Supply Chain)
+        count_sbom=$(find artifacts -maxdepth 1 -name "*.spdx.json" | wc -l)
+        if [ "$count_sbom" -eq 0 ]; then
+          echo "❌ FAILURE: No SBOM (Supply Chain) found."
+          exit 1
+        fi
+
+        echo "✅ CUSTODY GATE PASSED: Identity ($count_dbc), Log ($count_case), and SBOM ($count_sbom) verified."
 
     - name: Upload Artifacts
       uses: actions/upload-artifact@v4
