--- a/.github/workflows/helix_ci.yml
+++ b/.github/workflows/helix_ci.yml
@@ -67,14 +67,16 @@ jobs:
         # 5. List Agents
         python3 helix.py list --directory artifacts
 
-    # --- SUPPLY CHAIN SECURITY ---
+# --- SUPPLY CHAIN SECURITY ---
     - name: 🛡️ Generate SBOM (Syft)
       uses: anchore/sbom-action@v0
       with:
         path: .
         format: spdx-json
         output-file: artifacts/helix-sbom-${{ matrix.python-version }}.spdx.json
-        upload-artifact: false  # <--- CRITICAL FIX: Prevents matrix collision
+        # CRITICAL FIX: Explicitly name the artifact with the matrix version to prevent collisions
+        artifact-name: helix-sbom-${{ matrix.python-version }}
+        upload-artifact: false
 
     # --- THE CUSTODY GATE (ROBUST CHECK) ---
     - name: Assert Artifacts Exist
