--- a/.github/workflows/helix_ci.yml
+++ b/.github/workflows/helix_ci.yml
@@ -74,8 +74,8 @@ jobs:
         path: .
         format: spdx-json
         output-file: artifacts/helix-sbom-${{ matrix.python-version }}.spdx.json
-        # CRITICAL FIX: Explicitly name the artifact with the matrix version to prevent collisions
-        artifact-name: helix-sbom-${{ matrix.python-version }}
+        # CRITICAL FIX: Make the upload name unique per matrix job
+        artifact-name: sbom-py${{ matrix.python-version }}
         upload-artifact: false
 
     # --- THE CUSTODY GATE (ROBUST CHECK) ---
